--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -1,7 +1,19 @@
 {
-  "files": [],
-  "references": [
-    { "path": "./tsconfig.app.json" },
-    { "path": "./tsconfig.node.json" }
-  ]
+    "compilerOptions": {
+      "target": "es2020",
+      "lib": ["es2020", "dom", "dom.iterable"],
+      "module": "esnext",
+      "skipLibCheck": true,
+      "moduleResolution": "node",
+      "allowImportingTsExtensions": true,
+      "isolatedModules": true,
+      "noEmit": true,
+      "jsx": "react-jsx",
+      "strict": true,
+      "noUnusedLocals": true,
+      "noUnusedParameters": true,
+      "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.tsbuildinfo",
+      "allowSyntheticDefaultImports": true
+    },
+    "include": ["src"]
 }
