--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,11 @@
     "test": "jest"
   },
   "dependencies": {
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
+    "@mui/icons-material": "^6.1.6",
+    "@mui/material": "^6.1.6",
+    "@mui/styles": "^6.1.6",
     "@types/testing-library__react": "^10.2.0",
     "axios": "^1.7.7",
     "react": "^18.3.1",
